# wasi-mcp

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  ARCHITECTURE-PROPOSAL.md  BUILD.bazel  EXECUTIVE-SUMMARY.md  MODULE.bazel  README.md  REDESIGN-STATUS.md  WASI-SYSTEM-INTERFACE-ANALYSIS.md
.github/workflows/: ci.yml  main.yml
archive/: client-protocol-faithful.wit  notifications-protocol-faithful.wit  preview2-server-protocol-faithful.wit  server-protocol-faithful.wit  streaming-protocol-faithful.wit
wit/: capabilities.wit  client.wit  content.wit  deps.toml  example.wit  handlers.wit  runtime.wit  server.wit  streaming.wit  types.wit  world.wit
wit/preview2/: README.md  client.wit  handlers.wit  runtime.wit  types.wit  world.wit
