"""WASI MCP - Model Context Protocol Interface Definitions

WASI MCP follows a bidirectional system interface pattern:
- Components IMPORT runtime (register capabilities, start serving)
- Components EXPORT handlers (execute tools, read resources)

Architecture:
  Host: Protocol, transport, auth, middleware
  Component: Domain logic (tools, resources, prompts)
"""

load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# ============================================================================
# Preview3 Version (Aspirational - with async/future support)
# ============================================================================

# WASI MCP WIT Library - Preview3
#
# Interfaces:
# - runtime.wit: Registration and framework APIs (component imports)
# - handlers.wit: Callback interfaces (component exports)
# - client.wit: Client operations (component imports)
# - world.wit: Bidirectional worlds
#
# Worlds:
# - mcp-backend: import runtime + export handlers
# - mcp-client: import client
# - mcp-proxy: import runtime + client, export handlers
wit_library(
    name = "mcp",
    srcs = glob(
        ["wit/*.wit"],
        exclude = ["wit/preview2/**"],
    ),
    package_name = "wasi:mcp@0.1.0",
    deps = [
        "@wasi_io//:streams",      # Includes error, poll, and streams
        "@wasi_clocks//:clocks",   # Includes wall-clock and monotonic-clock
    ],
)

# ============================================================================
# Preview2 Version (Immediate prototyping - synchronous operations)
# ============================================================================

# WASI MCP WIT Library - Preview2
#
# Interfaces (blocking versions):
# - runtime.wit: Registration and framework APIs (component imports)
# - handlers.wit: Callback interfaces (component exports)
# - client.wit: Client operations (component imports)
# - world.wit: Bidirectional worlds
#
# Worlds:
# - mcp-backend-preview2: import runtime + export handlers
# - mcp-client-preview2: import client
# - mcp-proxy-preview2: import runtime + client, export handlers
wit_library(
    name = "mcp_preview2",
    srcs = glob(["wit/preview2/*.wit"]),
    package_name = "wasi:mcp@0.1.0-preview2",
    deps = [
        "@wasi_clocks_v020//:clocks",   # Preview2 uses WASI 0.2.0
    ],
)
